--- a/chef.html
+++ b/chef.html
@@ -128,7 +128,7 @@
 				</div>
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="staff">
-						<div class="img" style="background-image: url(images/elzhard.jpg);"></div>
+						<div class="img" style="background-image: url(images/elzhard.JPG);"></div>
 						<div class="text px-4 pt-2">
 							<h3>Elzhard Mickronli</h3>
 							<span class="position mb-2">Chef Cook</span>
